@@ -6,12 +6,11 @@ import fluentq.apt.AbstractProcessorTest;
 import fluentq.apt.FluentQAnnotationProcessor;
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 public class InnerExtensionsTest extends AbstractProcessorTest {
 
@@ -25,10 +24,8 @@ public class InnerExtensionsTest extends AbstractProcessorTest {
             new File(packagePath, "ExampleEntity2.java").getPath());
     process(FluentQAnnotationProcessor.class, sources, "innerextensions");
     var qtypeContent =
-        new String(
-            Files.readAllBytes(
-                Path.of("target", "innerextensions", "com", "fluentq", "QExampleEntity2.java")),
-            StandardCharsets.UTF_8);
+        Files.readString(
+            Path.of("target", "innerextensions", "com", "fluentq", "QExampleEntity2.java"));
     assertThat(qtypeContent)
         .contains("return InnerExtensions.ExampleEntity2Extensions.isZero(this);");
   }
