@@ -18,142 +18,134 @@ import static org.assertj.core.api.Assertions.assertThat;
 import fluentq.core.domain.Cat;
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
 public class GenericExporterTest {
 
-  @Rule public TemporaryFolder folder = new TemporaryFolder();
+  @TempDir File folder;
 
   private GenericExporter exporter;
 
-  @Before
+  @BeforeEach
   public void setUp() {
     exporter = new GenericExporter();
   }
 
   @Test
   public void export() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.export(getClass().getPackage());
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbeddable.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbedded.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntity.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntityInterface.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleSupertype.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/sub/QExampleEntity2.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbeddable.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbedded.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntity.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntityInterface.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleSupertype.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/sub/QExampleEntity2.java")).exists();
   }
 
   @Test
   public void export_with_keywords() throws IOException {
     exporter.setKeywords(Keywords.JPA);
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.export(getClass().getPackage());
-    var str =
-        new String(
-            Files.readAllBytes(new File(folder.getRoot(), "fluentq/codegen/QGroup.java").toPath()),
-            StandardCharsets.UTF_8);
+    var str = Files.readString(new File(folder, "fluentq/codegen/QGroup.java").toPath());
     assertThat(str).contains("QGroup group = new QGroup(\"group1\");");
   }
 
   @Test
   public void export_with_stopClass() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.addStopClass(Examples.Supertype.class);
     exporter.export(getClass().getPackage());
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExamples_Supertype.java").exists())
-        .isFalse();
+    assertThat(new File(folder, "fluentq/codegen/QExamples_Supertype.java").exists()).isFalse();
   }
 
   @Test
   public void override_serializer() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.setSerializerClass(DefaultEntitySerializer.class);
     exporter.export(getClass().getPackage());
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbeddable.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbedded.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntity.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntityInterface.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleSupertype.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/sub/QExampleEntity2.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbeddable.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbedded.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntity.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntityInterface.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleSupertype.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/sub/QExampleEntity2.java")).exists();
   }
 
   @Test
   public void export_package_as_string() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.export(getClass().getPackage().getName());
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbeddable.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbedded.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntity.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntityInterface.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleSupertype.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/sub/QExampleEntity2.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbeddable.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbedded.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntity.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntityInterface.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleSupertype.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/sub/QExampleEntity2.java")).exists();
   }
 
   @Test
   public void export_with_package_suffix() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.setPackageSuffix("types");
     exporter.export(getClass().getPackage());
-    assertThat(new File(folder.getRoot(), "fluentq/codegentypes/QExampleEmbeddable.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegentypes/QExampleEmbedded.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegentypes/QExampleEntity.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegentypes/QExampleEntityInterface.java"))
-        .exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegentypes/QExampleSupertype.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/subtypes/QExampleEntity2.java"))
-        .exists();
+    assertThat(new File(folder, "fluentq/codegentypes/QExampleEmbeddable.java")).exists();
+    assertThat(new File(folder, "fluentq/codegentypes/QExampleEmbedded.java")).exists();
+    assertThat(new File(folder, "fluentq/codegentypes/QExampleEntity.java")).exists();
+    assertThat(new File(folder, "fluentq/codegentypes/QExampleEntityInterface.java")).exists();
+    assertThat(new File(folder, "fluentq/codegentypes/QExampleSupertype.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/subtypes/QExampleEntity2.java")).exists();
   }
 
   @Test
   public void export_handle_no_methods_nor_fields() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.setHandleFields(false);
     exporter.setHandleMethods(false);
     exporter.export(getClass().getPackage());
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbeddable.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbeddable.java")).exists();
   }
 
   @Test
   public void export_domain_package() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.export(Cat.class.getPackage());
   }
 
   @Test
   public void export_serializerConfig() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.setSerializerConfig(new SimpleSerializerConfig(true, true, true, true, ""));
     exporter.export(getClass().getPackage());
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbeddable.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbedded.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntity.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntityInterface.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleSupertype.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/sub/QExampleEntity2.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbeddable.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbedded.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntity.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntityInterface.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleSupertype.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/sub/QExampleEntity2.java")).exists();
   }
 
   @Test
   public void export_useFieldTypes() {
-    exporter.setTargetFolder(folder.getRoot());
+    exporter.setTargetFolder(folder);
     exporter.setUseFieldTypes(true);
     exporter.export(getClass().getPackage());
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbeddable.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEmbedded.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntity.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleEntityInterface.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/QExampleSupertype.java")).exists();
-    assertThat(new File(folder.getRoot(), "fluentq/codegen/sub/QExampleEntity2.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbeddable.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEmbedded.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntity.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleEntityInterface.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/QExampleSupertype.java")).exists();
+    assertThat(new File(folder, "fluentq/codegen/sub/QExampleEntity2.java")).exists();
   }
 
   @Test
   public void export_propertyHandling() throws IOException {
     for (PropertyHandling ph : PropertyHandling.values()) {
-      var f = folder.newFolder();
+      var f = Files.createTempDirectory(folder.toPath(), "export").toFile();
       var e = new GenericExporter();
       e.setTargetFolder(f);
       e.setPropertyHandling(ph);
